--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Maria Santos Portefolio</h1>
-							<p>Hi! I am Maria. Get to know me and take a look at some of my work. </p>
+							<p>Hi! I am Maria. Get to know me and some of my work. </p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
