--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									
 										<p>                                              </p>
 										<ul class="actions">
-											<li><a href="https://github.com/Agralinah/Covid-Data-Quick-Analysis" target="_blank" class="button primary large">See More</a></li>
+											<li><a href="https://github.com/mariamsantos/Covid-Data-Quick-Analysis" target="_blank" class="button primary large">See More</a></li>
 										</ul>
 									</div>
 								</section>
@@ -123,7 +123,7 @@
 										</div>
 										
 										<ul class="actions">
-											<li><a href="https://github.com/Agralinah/Web-Scrapping-Amazon" target="_blank" class="button primary large">See More</a></li>
+											<li><a href="https://github.com/mariamsantos/Web-Scrapping-Amazon" target="_blank" class="button primary large">See More</a></li>
 										</ul>
 									</div>
 								</section>
@@ -140,7 +140,7 @@
 										</div>
 										<p>                                              </p>
 										<ul class="actions">
-											<li><a href="https://github.com/Agralinah/Deep-Learning-Flowers-Recognition" target="_blank" class="button primary large">See more</a></li>
+											<li><a href="https://github.com/mariamsantos/Deep-Learning-Flowers-Recognition" target="_blank" class="button primary large">See more</a></li>
 										</ul>
 										<p>                                              </p>
 									</div>
@@ -166,13 +166,13 @@
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>Currenty living in Odivelas, Portugal</span>
+									<span>Currently living in Lisbon, Portugal</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/maria-machado-santos/"  target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://github.com/Agralinah" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://github.com/mariamsantos" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</li>
 							</ul>
