--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 					<div class="content">
 						<font size="4.0"></font>
 						<p>
-							A few interesting things about me. I love to be around nature and to read, specially Haruki Murakami. I am also a very creative person. I love to play with my cat and to have a nice cup of coffee. Lastly, I love learning. Every day I observe something new and like to wonder how it works, whether that be about data, math, or human behavior. 
-							I'm finishing my BSc in physics and diving in the world of data, where I've been enjoying redefining my path.
+							Hi, I'm Maria, a Data Analyst in the making. Here goes a few interesting things about me: 
+							- I love to be around nature and to read, specially Haruki Murakami. I am also a very creative person. I love to play with my cat and to have a nice cup of coffee. 
+							- I love learning. Every day I observe something new and like to wonder how it works, whether that be about data, math, or human behaviour, I think the physicist inside of me loves to put a bit of math in everything really. 
+							- Recently have been enjoying learning about f2p games, from story telling to first-person shooters, I like diving into games and figure out their balance. ALTER EGO is one game I'm really enjoying lately
 
 						</p>
 					</font>
