--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									
 					<section>
 						<header>
-							<h2>My hobbies</h2>
+							<h2>Hobbies</h2>
 						</header>
 						<div class="content">
 							<p> Reading, painting, cooking or baking, I love to do so many things! 
