--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Maria Santos Portefolio</h1>
+							<h1>Maria Santos Portfolio</h1>
 							<p>Hi! I am Maria. Get to know me and some of my work. </p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
